# FableWeaver

./: .gitignore  CLAUDE.md  README.md  SPEC.md  delete_old_cluster.sh  pyproject.toml  simulate.py
frontend/: package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
migrations/: env.py
migrations/versions/: 3d4d8a7cc8e2_drop_unused_adk_app_and_user_state_tables.py  6d2e6c5da1d8_initial_schema.py  91aa4ed0dae5_add_source_text_table.py  a1b2c3d4e5f6_drop_custom_adk_session_and_event_tables.py  c2d3e4f5g6h7_add_per_story_chapter_length_overrides.py  d3e4f5g6h7i8_add_version_number_to_world_bible.py  e5aa736879cf_add_bible_snapshot_tracking.py
scripts/: fix_bible_from_chapters.py  migrate_bible_schemas.py  migrate_chapter_outputs.py  normalize_bible_data.py  test_prompts.py
src/: app.py  callbacks.py  config.py  database.py  dataset.md  main.py  models.py  pipelines.py  world_bible.json
src/agents/: narrative.py  research.py
src/data/: universe_config.json
src/routers/: branches.py  setup.py  stories.py
src/schemas/: __init__.py  (+4 more)
tests/: BACK_AND_FORTH_ANALYSIS.md  KUDOU_SYSTEM_TEST_README.md  PERFORMANCE_VERIFICATION_FINAL.md  PHASE_1_EXECUTION_GUIDE.md  README.md  README_TEST_SUITE.md  SYSTEM_GAP_ANALYSIS.md  SYSTEM_INTEGRATION_REPORT.md  debug_error.py  full_system_test.py  kudou_test_plan.md  performance_report.md  performance_results.json  prompt_debugging.py  real_performance_test.sh  real_system_test.py  real_system_test_results.json  test_power_origin_isolation.py  test_runner.py  test_trim_history.py  verify_performance.py
(+49 files in other folders)
